Minor corrections on guide
Correction: get_best_match returns dictionary with empty values not keys when no query is returned.

--- a/API Reference Guide.ipynb
+++ b/API Reference Guide.ipynb
@@ -446,7 +446,7 @@
    "metadata": {},
    "source": [
     "**has_ID**(*file*)<br>\n",
-    "Checks if file has IDv3 tag. Currently only supports *.mp3* and *.flac* files. Returns *True* or *False*."
+    "Checks if file has IDv3 tag. Currently only supports *.mp3* and *.flac* files. Returns boolean."
    ]
   },
   {
@@ -676,7 +676,7 @@
    "metadata": {},
    "source": [
     "**get_best_match**(*artist*, *title*)<br>\n",
-    "Retrieves Spotify track *artist*, *title*, *URI*, and similarity *score* of closest match to given *artist* and *title* strings. Returns dictionary if an output is produced. Otherwise, returns dictionary with empty keys.\n",
+    "Retrieves Spotify track *artist*, *title*, *URI*, and similarity *score* of closest match to given *artist* and *title* strings. Returns dictionary if an output is produced. Otherwise, returns dictionary with empty values.\n",
     "\n",
     "First performs detailed search using every tokenized title permutation &ndash; the *artist* along with, iteratively: `lessons in love`, `lessons`, `in`, `love`. Selects the closest match (i.e. best score) among the results.\n",
     "\n",
