Added Requirements section
Added instructions on how to get Client ID and Client Secret.

--- a/API Reference Guide.ipynb
+++ b/API Reference Guide.ipynb
@@ -16,7 +16,10 @@
     "### Usage ###\n",
     "Tracks are fetched by supplying the source folder. The *artist* and *title* are queried from the ID tags (MP3 and FLAC audio files are supported). If no tags are available, the artist-track parsing is done at the the filename level by indicating the delimiter (*sep*). These information are used to perform a detailed search request to the Web API and the best-match track is retrieved. The tracks are scored using string-similarity &ndash; *Spotify's artists and title vs. local tag's artists and title* &ndash; and the user identifies the accept-fail score threshold. \n",
     "\n",
-    "All information (including filename, artist tag, title tag, equivalent Spotify track, Spotify URI, similarity score, etc.) are stored in a Pandas dataframe. User is free to review, update, or delete entries before appending the tracks to a new or existing playlist."
+    "All information (including filename, artist tag, title tag, equivalent Spotify track, Spotify URI, similarity score, etc.) are stored in a Pandas dataframe. User is free to review, update, or delete entries before appending the tracks to a new or existing playlist.",
+    "\n",
+    "### Requirements ###\n",
+    "An app must first be created on https://developer.spotify.com/ in order to generate a *Client ID* and a *Client Sercret*. These are used to supply the variables *cid* and *secret*, respectively. The API makes use of the Authorization Code Flow to gain an access token from Spotify. Thus, a redirect URL is also required. The *redirect* variable is by default http://127.0.0.1:9090 but can be changed as needed."
    ]
   },
   {
